# study_2023-2024_mathmod

./: .gitattributes  .gitignore  CHANGELOG.md
auto/: .gitignore  run.py  rutube.py  youtube.py
labs/lab1/presentation/: presentation.md
labs/lab1/report/: Makefile  report.md
labs/lab2/presentation/: presentation.md
labs/lab2/report/: report.md
labs/lab2/work/: julia.ipynb  modelica.mo
labs/lab3/presentation/: presentation.md
labs/lab3/report/: report.md
labs/lab3/work/: julia.ipynb  lab2_model1.mo  lab2_model2.mo
labs/lab4/presentation/: presentation.md
labs/lab4/report/: report.md
labs/lab4/work/: julia.ipynb  lab4_1.mo  lab4_2.mo  lab4_3.mo
labs/lab5/presentation/: presentation.md
labs/lab5/report/: report.md
labs/lab5/work/: julia.ipynb  lab5.mo
labs/lab6/presentation/: presentation.md
labs/lab6/report/: report.md
labs/lab6/work/: julia.ipynb  lab6_1.mo  lab6_2.mo
labs/lab7/presentation/: presentation.md
labs/lab7/report/: report.md
labs/lab7/work/: julia.ipynb  lab7_1.mo  lab7_2.mo  lab7_3.mo
labs/lab8/presentation/: presentation.md
labs/lab8/report/: report.md
labs/lab8/work/: julia.ipynb  lab8_1.mo  lab8_2.mo
presentation/presentation/: presentation.md
presentation/report/: report.md
presentation/report/bib/: cite.bib
project-group/stage2/presentation/: presentation.md
project-group/stage2/report/: report.md
project-group/stage4/work/solarium/: Cargo.toml  run.py
project-group/stage4/work/solarium/src/: decimate.rs  lib.rs  main.rs  manip.rs  particle.rs  prepare.rs  timeseries.rs  types.rs  vec2.rs
(+25 files in other folders)
