[package]
name = "solarium"
version = "0.2.0"
edition = "2021"
default-run = "insolance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
libc = "*"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive"] }
postcard = { version = "1.0.8", features = ["use-std"] }
serde_json = "1.0.114"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name="insolance"
path="src/main.rs"

[profile.release]
debug = true